# STEP

./: CMakeLists.txt  LICENSE  README.md  compile.sh  memory_measurement.sh
include/: Edge.h  EdgeFinder.h  EdgeMap.h  EdgeSet.h  FixedSizePQ.h  OnlineEdgeSet.h  Subgraph.h  algorithms.h  utils.h
src/: Edge.cpp  EdgeFinder.cpp  EdgeMap.cpp  STEP.cpp  STEP_online.cpp  Subgraph.cpp  algorithms.cpp  build_predictor.cpp  dataset_preprocessing.cpp  utils.cpp
synthEquinix/: README.txt  main.cpp
